--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.3.1",
+    "react-d3-tree": "^1.10.4",
     "react-dom": "^16.3.1",
     "react-scripts-ts": "2.14.0"
   },
